--- a/background.html
+++ b/background.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Background Page</title>
+  <title>Background</title>
 </head>
 <body>
-  
+  <style>
+  body {
+  padding-top: 80px;
+  text-align: center;
+  font-family: monaco, monospace;
+  background: url(http://media.giphy.com/media/Jrd9E2kuPuOYM/giphy.gif) 50%;
+  background-size: cover;
+}
+h1, h2 {
+  display: inline-block;
+  background: #fff;
+}
+h1 {
+  font-size: 30px
+}
+h2 {
+  font-size: 20px;
+}
+span {
+  background: #fd0;
+}
+</style>
+<h1>Welcome to <span>My Chrome Extension</span></h1><br>
+<h2></h2>
 </body>
 </html>
